<resources>
    <string name="app_name">Suburb Runner</string>
    <string name="start_game">Start Game</string>
    <string name="high_score">High Score</string>
    <string name="settings">Settings</string>
    <string name="credits">Credits</string>
    <string name="close">Exit</string>
    <string name="description_image_main_menu">Start Image in Main Menu</string>
    <string name="high_scores">Highscores</string>
    <string name="font_family_game_button">sans-serif-medium</string>
    <string name="saved_player_name_key">SAVED_PLAYER_NAME</string>
    <string name="saved_player_name_default">Runner</string>
    <string name="title_activity_test_to_remove">TestToRemove</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="code_and_game_design">Game Design and Programming</string>
    <string name="credits_game_designer">Domenic Cassisi</string>
    <string name="credits_assets_title">Game Assets</string>
    <string name="credits_game_assets_content">Landscape Tiles by: eracoon\nGUI images: pzUH\nHuman Model by: quaternius\nCoin by: rubberduck\nSkyBox by: KIIRA\nMusic by MSTR\nCoin Sound Effect by wobbleboxx</string>
    <string name="settings_set_name">Set your player name</string>
    <string name="settings_no_empty_playername_allowed">Empty player names are not allowed!</string>
    <string name="settings_too_long_playername">Player name must have less than 14 characters</string>
    <string name="settings_too_short_playername">Player name must at least have 3 characters</string>
    <string name="help">Help</string>
    <string name="help_player_navigation_title">Player Navigation</string>
    <string name="help_player_navigation_content">Swipe your phone to the left and right to control the characters movement</string>
    <string name="help_player_jumping_title">Jumping</string>
    <string name="help_player_jumping_content">Fling your finger up to jump.</string>
</resources>
