<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/green_background"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/panel_empty">

        <TextView
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:text="@string/settings"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="70dp">


          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="24sp"
              android:text="@string/settings_set_name" />

            <EditText
                android:id="@+id/settings_playerName_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/saved_player_name_default"
                android:importantForAutofill="no" />


        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/settings_save_button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="0"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/check_button" />

            <Space
                android:layout_width="40dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/settings_cancel_button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="0"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/cross_button" />

        </LinearLayout>


    </LinearLayout>




</LinearLayout>